scheek-index.html-updates-9.17.25

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Folio Bootstrap Template</title>
+  <title>Sasha Cheek | Technologist & Science Writer </title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -53,7 +53,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#portfolio">Technical Projects</a></li>
-          <li><a href="#blog-accordion">Blog</a></li>
+          <li><a href="#blog-accordion">Writing</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -75,7 +75,7 @@
         <p style="opacity: 0.8;">AI * APIs * Systems Engineering * Particle Physics * Space Science</p>
         <div class="social-links">
           <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
-          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="https://github.com/scheek-100/scheek-100.github.io"><i class="bi bi-github"></i></a>
           <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
@@ -170,16 +170,15 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Experience and technical expertise at a glance.</p>
       </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <!--<div class="container" data-aos="fade-up" data-aos-delay="100"> -->
     <!-- Resume Section [Lonely Bootstrap Addition] -->
     <section class="resume py-5 d-section" id="resume">
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <h3 class="my-3 blue-gray poppins">Sumary</h3>
+              <h3 class="my-3 blue-gray poppins">Summary</h3>
               <div class="resume-item ps-4 position-relative">
                 <h4 class="mb-2 playfair fs-5">Alice Barkley</h4>
                 <p class="mb-3 dark-text">
@@ -271,7 +270,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Technical Projects</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -370,7 +369,7 @@
 <section id="blog-accordion" class="py-5">
   <div class="container">
     <div class="section-header text-center mb-4">
-      <h2 class="mb-1">From the Blog</h2>
+      <h2 class="mb-1">Writing</h2>
       <p class="text-muted mb-0">Latest posts, summaries and quick links — expand to read more.</p>
     </div>
 
@@ -497,7 +496,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Results recognized by former colleagues, coworkers, and clients.</p>
       </div><!-- End Section Title -->
     
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -617,7 +616,7 @@
       <p>Bridging the gap between systems and narrative.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href="https://github.com/scheek-100/scheek-100.github.io"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
