scheek-index.html-updates-v02-9.17.25

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-lightbulb-fill"></i></div>
             <div>
-              <h4 class="title">Technical Consulting</h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title">Technical Consulting & Integrations</h4>
+              <p class="description">*Improve existing technical documentation or create them to streamline information about API architecture, systems engineering, data feeds, and other similar topics.<br>*Offer services related to systems integrations projects and initiatives in a consultant role.</p>
               <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
@@ -135,16 +135,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-vector-pen"></i></div>
             <div>
               <h4 class="title">Science & Technology Writing</h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-intersect"></i></div>
-            <div>
-              <h4 class="title">Systems Engineering & Integrations</h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">*Report on science and technical expertise in narrative form as a contributor, SME, and for freelance writing.<br>*Write research-driven features related to science, technology, engineering, and other similar topics for articles.</p>
               <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -153,7 +144,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-person-arms-up"></i></div>
             <div>
               <h4 class="title">Mentorship & Advisory</h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">*Coach on careers in technical integrations and systems engineering.<br>*Review resumes, pitches, and technical skills.<br>*Guide colleagues and clients on APIs, feeds, and other data processes.</p>
               <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
