--- a/index.html
+++ b/index.html
@@ -83,31 +83,45 @@
 
     </section><!-- /Hero Section -->
 
-    <!-- About Section -->
-    <section id="about" class="about section">
+<!-- About Section -->
+<section id="about" class="about section" style="position: relative; overflow: hidden;">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>About</h2>
+  </div><!-- End Section Title -->
 
-      </div><!-- End Section Title -->
+  <div class="container" data-aos="fade-up" data-aos-delay="100" style="position: relative; z-index: 1;">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <!-- Background image -->
+    <img src="assets/img/motherboard-background.jpg" alt="" data-aos="fade-in"
+      style="position: absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2;">
 
-        <div class="row gy-4 justify-content-between">
-          <div class="col-lg-4 profile-img align-self-start">
-            <img src="https://media.licdn.com/dms/image/v2/D4E03AQFhIHTA-7Yisg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1710599898260?e=1760572800&v=beta&t=4OgrGlAuEfvje2SDfZQ4JYN4I_4Kpzwpamn-mRMMr4w" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-7 content">
-            <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to demystify engineering and science through storytelling.</h3>
-            <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and program management roles at Microsoft and Indeed. In addition to working full-time in technology, Sasha is an M.A. candidate in Science Writing at Johns Hopkins University.</p>
-            <p>When Sasha is not debugging code and creating articles, she's dissecting the science behind her favorite films and TV shows.</p>
-          </div>
-        </div>
+    <!-- Dark overlay -->
+    <div
+      style="position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(10,15,25,0.7); z-index:-1;">
+    </div>
 
+    <div class="row gy-4 justify-content-between" style="position: relative; z-index: 2;">
+      <div class="col-lg-4 profile-img align-self-start">
+        <img
+          src="https://media.licdn.com/dms/image/v2/D4E03AQFhIHTA-7Yisg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1710599898260?e=1760572800&v=beta&t=4OgrGlAuEfvje2SDfZQ4JYN4I_4Kpzwpamn-mRMMr4w"
+          class="img-fluid" alt="">
       </div>
+      <div class="col-lg-7 content">
+        <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to demystify
+          engineering and science through storytelling.</h3>
+        <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and program
+          management roles at Microsoft and Indeed. In addition to working full-time in technology, Sasha is an M.A.
+          candidate in Science Writing at Johns Hopkins University.</p>
+        <p>When Sasha is not debugging code and creating articles, she's dissecting the science behind her favorite
+          films and TV shows.</p>
+      </div>
+    </div>
 
-    </section><!-- /About Section -->
+  </div>
+</section><!-- /About Section -->
+
 
     <!-- Services Section -->
     <section id="services" class="services section">
