--- a/index.html
+++ b/index.html
@@ -84,25 +84,19 @@
     </section><!-- /Hero Section -->
 
 <!-- About Section -->
-<section id="about" class="about section" style="position: relative; overflow: hidden;">
+<section id="about" class="about section-with-bg">
 
-  <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>About</h2>
-  </div><!-- End Section Title -->
+  <!-- Full background + overlay -->
+  <img src="assets/img/motherboard-background.jpg" alt="" class="bg-img" data-aos="fade-in">
+  <div class="overlay"></div>
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100" style="position: relative; z-index: 1;">
-
-    <!-- Background image -->
-    <img src="assets/img/motherboard-background.jpg" alt="" data-aos="fade-in"
-      style="position: absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2;">
-
-    <!-- Dark overlay -->
-    <div
-      style="position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(10,15,25,0.7); z-index:-1;">
+  <!-- Everything (title + content) wrapped inside -->
+  <div class="container content-wrap" data-aos="fade-up">
+    <div class="section-title">
+      <h2>About</h2>
     </div>
 
-    <div class="row gy-4 justify-content-between" style="position: relative; z-index: 2;">
+    <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
       <div class="col-lg-4 profile-img align-self-start">
         <img
           src="https://media.licdn.com/dms/image/v2/D4E03AQFhIHTA-7Yisg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1710599898260?e=1760572800&v=beta&t=4OgrGlAuEfvje2SDfZQ4JYN4I_4Kpzwpamn-mRMMr4w"
@@ -118,10 +112,9 @@
           films and TV shows.</p>
       </div>
     </div>
-
   </div>
-</section><!-- /About Section -->
 
+</section><!-- /About Section -->
 
     <!-- Services Section -->
     <section id="services" class="services section">
