--- a/index.html
+++ b/index.html
@@ -115,51 +115,59 @@
       </div>
     </section><!-- /About Section -->
 
-<!-- Services Section -->
+<<!-- Services Section -->
 <section id="services" class="services section-img-bg">
 
-  <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Services</h2>
-    <p>The services I offer cover technical consulting, mentorship and guidance for individuals in engineering and tech, integrations, and freelance science writing services.</p>
-  </div><!-- End Section Title -->
-
   <div class="container">
-    <div class="row gy-4">
+    <div class="terminal-overlay">
 
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-        <div class="icon flex-shrink-0"><i class="bi bi-lightbulb-fill"></i></div>
-        <div>
-          <h4 class="title">Technical Consulting & Integrations</h4>
-          <p class="description">*Improve existing technical documentation or create them to streamline information about API architecture, systems engineering, data feeds, and other similar topics.<br>*Offer services related to systems integrations projects and initiatives in a consultant role.</p>
-        </div>
-      </div><!-- End Service Item -->
+      <!-- Section Title -->
+      <div class="section-title" data-aos="fade-up">
+        <h2>Services</h2>
+        <p>The services I offer cover technical consulting, mentorship and guidance for individuals in engineering and tech, integrations, and freelance science writing services.</p>
+      </div><!-- End Section Title -->
 
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-        <div class="icon flex-shrink-0"><i class="bi bi-vector-pen"></i></div>
-        <div>
-          <h4 class="title">Science & Technology Writing</h4>
-          <p class="description">*Report on science and technical expertise in narrative form as a contributor, SME, and for freelance writing.<br>*Write research-driven features related to science, technology, engineering, and other similar topics for articles.</p>
-        </div>
-      </div><!-- End Service Item -->
+      <div class="row gy-4">
 
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-        <div class="icon flex-shrink-0"><i class="bi bi-person-arms-up"></i></div>
-        <div>
-          <h4 class="title">Mentorship & Advisory</h4>
-          <p class="description">*Coach on careers in technical integrations and systems engineering.<br>*Review resumes, pitches, and technical skills.<br>*Guide colleagues and clients on APIs, feeds, and other data processes.</p>
-        </div>
-      </div><!-- End Service Item -->
+        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+          <div class="icon flex-shrink-0"><i class="bi bi-lightbulb-fill"></i></div>
+          <div>
+            <h4 class="title">Technical Consulting & Integrations</h4>
+            <p class="description">
+              *Improve existing technical documentation or create them to streamline information about API architecture, systems engineering, data feeds, and other similar topics.<br>
+              *Offer services related to systems integrations projects and initiatives in a consultant role.
+            </p>
+          </div>
+        </div><!-- End Service Item -->
 
-    </div>
-  </div>
+        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+          <div class="icon flex-shrink-0"><i class="bi bi-vector-pen"></i></div>
+          <div>
+            <h4 class="title">Science & Technology Writing</h4>
+            <p class="description">
+              *Report on science and technical expertise in narrative form as a contributor, SME, and for freelance writing.<br>
+              *Write research-driven features related to science, technology, engineering, and other similar topics for articles.
+            </p>
+          </div>
+        </div><!-- End Service Item -->
+
+        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+          <div class="icon flex-shrink-0"><i class="bi bi-person-arms-up"></i></div>
+          <div>
+            <h4 class="title">Mentorship & Advisory</h4>
+            <p class="description">
+              *Coach on careers in technical integrations and systems engineering.<br>
+              *Review resumes, pitches, and technical skills.<br>
+              *Guide colleagues and clients on APIs, feeds, and other data processes.
+            </p>
+          </div>
+        </div><!-- End Service Item -->
+
+      </div><!-- End row -->
+
+    </div><!-- End terminal overlay -->
+  </div><!-- End container -->
 </section><!-- /Services Section -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Services Section -->
 
     <!-- Resume Section [Lonely Bootstrap Addition] -->
      <section id="resume" class="resume section-black">
