--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
     </section><!-- /About Section -->
 
-<<!-- Services Section -->
+<!-- Services Section -->
 <section id="services" class="services section-img-bg">
 
   <div class="container">
