--- a/index.html
+++ b/index.html
@@ -267,101 +267,106 @@
         </div>
       </section><!-- /Resume Section [Lonely Bootstrap Addition] -->
 
-    <!-- Technology Projects Section -->
+   <!-- Technology Projects Section -->
 <section id="portfolio" class="portfolio section-img-bg">
 
-  <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Technical Projects</h2>
-    <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
-  </div><!-- End Section Title -->
-
   <div class="container">
-    <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+    <div class="terminal-overlay">
 
-      <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-        <li data-filter="*" class="filter-active">All</li>
-        <li data-filter=".filter-writing">API Projects</li>
-        <li data-filter=".filter-projects">Coding Projects</li>
-      </ul><!-- End Portfolio Filters -->
+      <!-- Section Title -->
+      <div class="section-title" data-aos="fade-up">
+        <h2>Technical Projects</h2>
+        <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
+      </div><!-- End Section Title -->
 
-      <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+      <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-writing">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>API Project 1</h4>
-              <p>Lorem ipsum, dolor sit amet consectetur</p>
-              <a href="assets/img/portfolio/app-1.jpg" title="API Project 1" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+        <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+          <li data-filter="*" class="filter-active">All</li>
+          <li data-filter=".filter-writing">API Projects</li>
+          <li data-filter=".filter-projects">Coding Projects</li>
+        </ul><!-- End Portfolio Filters -->
+
+        <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-writing">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>API Project 1</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <a href="assets/img/portfolio/app-1.jpg" title="API Project 1" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
             </div>
-          </div>
-        </div><!-- End Portfolio Item -->
+          </div><!-- End Portfolio Item -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Coding Projects 1</h4>
-              <p>Lorem ipsum, dolor sit amet consectetur</p>
-              <a href="assets/img/portfolio/product-1.jpg" title="Coding Projects 1" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Coding Projects 1</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <a href="assets/img/portfolio/product-1.jpg" title="Coding Projects 1" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
             </div>
-          </div>
-        </div><!-- End Portfolio Item -->
+          </div><!-- End Portfolio Item -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-writing">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>API Project 2</h4>
-              <p>Lorem ipsum, dolor sit amet consectetur</p>
-              <a href="assets/img/portfolio/app-2.jpg" title="API Project 2" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-writing">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>API Project 2</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <a href="assets/img/portfolio/app-2.jpg" title="API Project 2" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
             </div>
-          </div>
-        </div><!-- End Portfolio Item -->
+          </div><!-- End Portfolio Item -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Coding Projects 2</h4>
-              <p>Lorem ipsum, dolor sit amet consectetur</p>
-              <a href="assets/img/portfolio/product-2.jpg" title="Coding Projects 2" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Coding Projects 2</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <a href="assets/img/portfolio/product-2.jpg" title="Coding Projects 2" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
             </div>
-          </div>
-        </div><!-- End Portfolio Item -->
+          </div><!-- End Portfolio Item -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-writing">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>API Project 3</h4>
-              <p>Lorem ipsum, dolor sit amet consectetur</p>
-              <a href="assets/img/portfolio/app-3.jpg" title="API Project 3" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-writing">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>API Project 3</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <a href="assets/img/portfolio/app-3.jpg" title="API Project 3" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
             </div>
-          </div>
-        </div><!-- End Portfolio Item -->
+          </div><!-- End Portfolio Item -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Coding Projects 3</h4>
-              <p>Lorem ipsum, dolor sit amet consectetur</p>
-              <a href="assets/img/portfolio/product-3.jpg" title="Coding Projects 3" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Coding Projects 3</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur</p>
+                <a href="assets/img/portfolio/product-3.jpg" title="Coding Projects 3" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
             </div>
-          </div>
-        </div><!-- End Portfolio Item -->
+          </div><!-- End Portfolio Item -->
 
-      </div><!-- End Portfolio Container -->
-    </div>
-  </div>
+        </div><!-- End Portfolio Container -->
+
+      </div><!-- End Isotope Layout -->
+
+    </div><!-- End terminal overlay -->
+  </div><!-- End container -->
 </section><!-- /Technology Projects Section -->
 
         </div>
