--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
 
         <p>The services I offer cover technical consulting, mentorship and guidance for individuals in engineering and tech, integrations, and freelance science writing services.</p>
       </div><!-- End Section Title -->
+<!-- Terminal Overlay Box -->
+<div class="container">
+    <div class="terminal-overlay">
 
       <div class="row gy-4">
 
