--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
       <div class="container content-wrap" data-aos="fade-up">
         <div class="section-title">
           <h2>About</h2>
+!<-- TERMINAL OVERLAY BORDER -->  
+<div class="container">
+    <div class="terminal-overlay">
+
         </div>
         <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-4 profile-img align-self-start">
@@ -121,13 +125,13 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Services</h2>
-  
+!<-- TERMINAL OVERLAY BORDER -->  
 <div class="container">
     <div class="terminal-overlay">
 
         <p>The services I offer cover technical consulting, mentorship and guidance for individuals in engineering and tech, integrations, and freelance science writing services.</p>
       </div><!-- End Section Title -->
-<!-- Terminal Overlay Box -->
+<!-- TERMINAL OVERLAY BORDER -->
 <div class="container terminal-overlay">
 
       <div class="row gy-4">
@@ -177,6 +181,10 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
+!<-- TERMINAL OVERLAY BORDER -->  
+<div class="container">
+    <div class="terminal-overlay">
+
         <p>Experience and technical expertise at a glance.</p>
       </div><!-- End Section Title -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -279,6 +287,10 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Technical Projects</h2>
+!<-- TERMINAL OVERLAY BORDER -->  
+<div class="container">
+    <div class="terminal-overlay">
+
         <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
       </div><!-- End Section Title -->
 
@@ -382,7 +394,11 @@
 <section id="blog-accordion" class="section-black py-5">
   <div class="container">
     <div class="section-header text-center mb-4">
-      <h2 class="mb-1">Writing</h2>
+      <h2>Writing</h2>
+!<-- TERMINAL OVERLAY BORDER -->  
+<div class="container">
+    <div class="terminal-overlay">
+
       <p class="text-muted mb-0">Latest posts, summaries and quick links — expand to read more.</p>
     </div>
 
@@ -512,6 +528,10 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
+!<-- TERMINAL OVERLAY BORDER -->  
+<div class="container">
+    <div class="terminal-overlay">
+
         <p>Results recognized by former colleagues, coworkers, and clients.</p>
       </div><!-- End Section Title -->
 
@@ -591,6 +611,10 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
+!<-- TERMINAL OVERLAY BORDER -->  
+<div class="container">
+    <div class="terminal-overlay">
+
         <p>Have a question, need help with a project, or just talk about tech? I'm always happy to connect. Send me a message, and I will respond within 24-48 hours.</p>
       </div><!-- End Section Title -->
 
