--- a/index.html
+++ b/index.html
@@ -101,9 +101,6 @@
       <div class="container content-wrap" data-aos="fade-up">
         <div class="section-title">
           <h2>About</h2>
-!<-- TERMINAL OVERLAY BORDER -->  
-<div class="container">
-    <div class="terminal-overlay">
 
         </div>
         <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
@@ -125,7 +122,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Services</h2>
-!<-- TERMINAL OVERLAY BORDER -->  
+<!-- TERMINAL OVERLAY BORDER -->  
 <div class="container">
     <div class="terminal-overlay">
 
@@ -181,7 +178,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-!<-- TERMINAL OVERLAY BORDER -->  
+<!-- TERMINAL OVERLAY BORDER -->  
 <div class="container">
     <div class="terminal-overlay">
 
@@ -287,7 +284,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Technical Projects</h2>
-!<-- TERMINAL OVERLAY BORDER -->  
+<!-- TERMINAL OVERLAY BORDER -->  
 <div class="container">
     <div class="terminal-overlay">
 
@@ -395,7 +392,7 @@
   <div class="container">
     <div class="section-header text-center mb-4">
       <h2>Writing</h2>
-!<-- TERMINAL OVERLAY BORDER -->  
+<!-- TERMINAL OVERLAY BORDER -->  
 <div class="container">
     <div class="terminal-overlay">
 
@@ -528,7 +525,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-!<-- TERMINAL OVERLAY BORDER -->  
+<!-- TERMINAL OVERLAY BORDER -->  
 <div class="container">
     <div class="terminal-overlay">
 
@@ -611,7 +608,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-!<-- TERMINAL OVERLAY BORDER -->  
+<!-- TERMINAL OVERLAY BORDER -->  
 <div class="container">
     <div class="terminal-overlay">
 
