--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@
 
         <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
       </div><!-- End Section Title -->
+<!-- TERMINAL OVERLAY BORDER -->
+<div class="container terminal-overlay">
 
       <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
@@ -531,6 +533,8 @@
 
         <p>Results recognized by former colleagues, coworkers, and clients.</p>
       </div><!-- End Section Title -->
+<!-- TERMINAL OVERLAY BORDER -->
+<div class="container terminal-overlay">
 
       <div data-aos="fade-up" data-aos-delay="100">
 
