--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
 
         <p>Experience and technical expertise at a glance.</p>
       </div><!-- End Section Title -->
+<!-- TERMINAL OVERLAY BORDER -->
+<div class="container terminal-overlay">
+
       <div class="container" data-aos="fade-up" data-aos-delay="100">
     <!-- Resume Section [Lonely Bootstrap Addition] -->
         <div class="container">
@@ -288,7 +291,7 @@
         <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
       </div><!-- End Section Title -->
 <!-- TERMINAL OVERLAY BORDER -->
-<div class="container">
+<div class="container terminal-overlay">
 
       <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
@@ -396,7 +399,9 @@
     <div class="terminal-overlay">
 
       <p class="text-muted mb-0">Latest posts, summaries and quick links — expand to read more.</p>
-    </div>
+    </div><!-- End Section Title -->
+<!-- TERMINAL OVERLAY BORDER -->
+<div class="container terminal-overlay">
 
     <div class="accordion" id="accordionBlog">
       <!-- Post 1 -->
@@ -527,7 +532,8 @@
 
         <p>Results recognized by former colleagues, coworkers, and clients.</p>
 </div><!-- End Section Title -->
- 
+<!-- TERMINAL OVERLAY BORDER -->
+<div class="container terminal-overlay">
       <div data-aos="fade-up" data-aos-delay="100">
 
         <div class="swiper init-swiper">
@@ -608,6 +614,8 @@
 
         <p>Have a question, need help with a project, or just talk about tech? I'm always happy to connect. Send me a message, and I will respond within 24-48 hours.</p>
       </div><!-- End Section Title -->
+<!-- TERMINAL OVERLAY BORDER -->
+<div class="container terminal-overlay">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
