--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@
         <div class="section-title">
           <h2>About</h2>
 
-        </div>
+        </div><!-- End Section Title -->
         <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-4 profile-img align-self-start">
             <img src="https://media.licdn.com/dms/image/v2/D4E03AQFhIHTA-7Yisg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1710599898260?e=1760572800&v=beta&t=4OgrGlAuEfvje2SDfZQ4JYN4I_4Kpzwpamn-mRMMr4w" class="img-fluid" alt="">
           </div>
+<!-- TERMINAL OVERLAY BORDER -->
+<div class="container terminal-overlay">
           <div class="col-lg-7 content">
             <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to demystify engineering and science through storytelling.</h3>
             <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and program management roles at Microsoft and Indeed. In addition to working full-time in technology, Sasha is an M.A. candidate in Science Writing at Johns Hopkins University.</p>
