--- a/index.html
+++ b/index.html
@@ -280,98 +280,106 @@
         </div>
       </section><!-- /Resume Section [Lonely Bootstrap Addition] -->
 
-   <!-- Technology Projects Section -->
+  <!-- Technology Projects Section -->
 <section id="portfolio" class="portfolio section-img-bg">
 
-      <!-- Section Title -->
-      <div class="section-title" data-aos="fade-up">
-        <h2>Technical Projects</h2>
-<!-- TERMINAL OVERLAY BORDER -->  
-<div class="container">
-    <div class="terminal-overlay">
-
+  <!-- Section Title -->
+  <div class="section-title" data-aos="fade-up">
+    <h2>Technical Projects</h2>
+    <div class="container">
+      <div class="terminal-overlay">
         <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
-      </div><!-- End Section Title -->
-<!-- TERMINAL OVERLAY BORDER -->
-<div class="container terminal-overlay">
+      </div>
+    </div>
+  </div>
+
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="terminal-overlay">
 
       <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-        <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+        <!-- Filters: use classes that match the items below -->
+        <ul class="portfolio-filters isotope-filters d-flex justify-content-center gap-3" data-aos="fade-up" data-aos-delay="100">
           <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-projects">API Projects</li>
-          <li data-filter=".filter-projects">Coding Projects</li>
+          <li data-filter=".filter-api">API Projects</li>
+          <li data-filter=".filter-coding">Coding Projects</li>
         </ul><!-- End Portfolio Filters -->
 
         <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
+          <!-- API Project (filter-api) -->
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-api">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="API Project 1">
               <div class="portfolio-info">
                 <h4>API Project 1</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                <a href="assets/img/portfolio/app-1.jpg" title="API Project 1" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <p>Integrations and data pipelines</p>
+                <a href="assets/img/portfolio/app-1.jpg" title="API Project 1" data-gallery="portfolio-gallery-api" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Portfolio Item -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
+          <!-- Coding Project (filter-coding) -->
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="Coding Project 1">
               <div class="portfolio-info">
-                <h4>Coding Projects 1</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                <a href="assets/img/portfolio/product-1.jpg" title="Coding Projects 1" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>Coding Project 1</h4>
+                <p>Frontend / backend demo</p>
+                <a href="assets/img/portfolio/product-1.jpg" title="Coding Project 1" data-gallery="portfolio-gallery-coding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Portfolio Item -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
+          <!-- API Project (filter-api) -->
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-api">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="API Project 2">
               <div class="portfolio-info">
                 <h4>API Project 2</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                <a href="assets/img/portfolio/app-2.jpg" title="API Project 2" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <p>Authentication and rate-limiting</p>
+                <a href="assets/img/portfolio/app-2.jpg" title="API Project 2" data-gallery="portfolio-gallery-api" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Portfolio Item -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
+          <!-- Coding Project (filter-coding) -->
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="Coding Project 2">
               <div class="portfolio-info">
-                <h4>Coding Projects 2</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                <a href="assets/img/portfolio/product-2.jpg" title="Coding Projects 2" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>Coding Project 2</h4>
+                <p>Data visualization</p>
+                <a href="assets/img/portfolio/product-2.jpg" title="Coding Project 2" data-gallery="portfolio-gallery-coding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Portfolio Item -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
+          <!-- API Project (filter-api) -->
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-api">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="API Project 3">
               <div class="portfolio-info">
                 <h4>API Project 3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                <a href="assets/img/portfolio/app-3.jpg" title="API Project 3" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <p>Webhook orchestration</p>
+                <a href="assets/img/portfolio/app-3.jpg" title="API Project 3" data-gallery="portfolio-gallery-api" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Portfolio Item -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
+          <!-- Coding Project (filter-coding) -->
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="Coding Project 3">
               <div class="portfolio-info">
-                <h4>Coding Projects 3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                <a href="assets/img/portfolio/product-3.jpg" title="Coding Projects 3" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>Coding Project 3</h4>
+                <p>Automation and tooling</p>
+                <a href="assets/img/portfolio/product-3.jpg" title="Coding Project 3" data-gallery="portfolio-gallery-coding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
