--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
             </div>
           </div>
         </div>
-      </section><!-- /Resume Section [Lonely Bootstrap Addition] -->
+      </section>
+<!-- /Resume Section [Lonely Bootstrap] -->
 
   <!-- Technology Projects Section -->
 <section id="portfolio" class="portfolio section-img-bg">
